k3s-ingres/assets/svc-http.yml
apiVersion: v1
kind: Service
metadata:
  name: service-http
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 80
    nodePort: 30081
  selector:
    app: http
  type: LoadBalancer
