k3s-ingres/assets/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  ports:
  - port: 8083
    protocol: TCP
    targetPort: 80
    nodePort: 30083
  selector:
    app: nginx
  type: LoadBalancer
