k3s-ingres/assets/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "ingress-test"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip

spec:
  rules:
    - host: example.net
      http:
        paths:
          - path: /http
            backend:
              serviceName: service-http
              servicePort: 8081
          - path: /nginx
            backend:
              serviceName: service-nginx
              servicePort: 8083
